--- a/Github2.ipynb
+++ b/Github2.ipynb
@@ -14,29 +14,13 @@
   },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "P-euHSYqE0FY",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        },
-        "outputId": "29e1089e-b509-485f-bef9-d5d2a355ddbc"
+        "id": "YBsqzci4GBUH",
+        "colab_type": "text"
       },
       "source": [
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1ZJOaEmIfTPIaDmeITTBOWIT3g76JK2zw)"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-09ae09467dbc>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1ZJOaEmIfTPIaDmeITTBOWIT3g76JK2zw)\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
       ]
     },
     {
