--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNZGI9iiPBSXkc99baFZgJl",
+      "authorship_tag": "ABX9TyMQ7w3B17jHmJWvUdvF1HdV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,11 +61,7 @@
       "metadata": {
         "id": "UfObsKYkOlGy",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 374
-        },
-        "outputId": "fadf1fee-dbfd-4a1e-b2ac-10f420caf406"
+        "colab": {}
       },
       "source": [
         "string = \"Hello, I'm Skywalker!\"\n",
@@ -73,64 +69,22 @@
         "for s in string:\n",
         "  print(s)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "H\n",
-            "e\n",
-            "l\n",
-            "l\n",
-            "o\n",
-            ",\n",
-            " \n",
-            "I\n",
-            "'\n",
-            "m\n",
-            " \n",
-            "S\n",
-            "k\n",
-            "y\n",
-            "w\n",
-            "a\n",
-            "l\n",
-            "k\n",
-            "e\n",
-            "r\n",
-            "!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4pDFQMNx0mbu",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "0d7b13e3-e6a9-45ff-d2d3-829e6dd603c3"
+        "colab": {}
       },
       "source": [
         "for i in [\"Yoda\", \"Luke\", \"Obi-wan\"]:\n",
         "  print(i)"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Yoda\n",
-            "Luke\n",
-            "Obi-wan\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -147,29 +101,14 @@
       "metadata": {
         "id": "6WjHC5R9PCul",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "53838601-39f0-44eb-8177-ff4e55606287"
+        "colab": {}
       },
       "source": [
         "for i in range(1, 5):\n",
         "  print(i)"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -186,31 +125,14 @@
       "metadata": {
         "id": "bBtjGwBJz3Ys",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        },
-        "outputId": "6db56ce7-506d-4c26-c954-1a953ccdd5b7"
+        "colab": {}
       },
       "source": [
         "for i in range(0, 11, 2):\n",
         "  print(i)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0\n",
-            "2\n",
-            "4\n",
-            "6\n",
-            "8\n",
-            "10\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -227,11 +149,7 @@
       "metadata": {
         "id": "2UgrmMRM2F7u",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "7924aea2-bbef-4397-fbaa-41b3425fbe62"
+        "colab": {}
       },
       "source": [
         "jedi = [\"Yoda\", \"Luke\", \"Obi-wan\"]\n",
@@ -245,22 +163,8 @@
         "  else:\n",
         "    print(\"How dare you\", i, \"!\")"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['Yoda', 'Luke', 'Obi-wan', 'Snoke', 'Vador', 'Dooku']\n",
-            "Hello Jedi Yoda !\n",
-            "Hello Jedi Luke !\n",
-            "Hello Jedi Obi-wan !\n",
-            "How dare you Snoke !\n",
-            "How dare you Vador !\n",
-            "How dare you Dooku !\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -269,7 +173,8 @@
         "colab_type": "text"
       },
       "source": [
-        "A for loop with the `zip` keyword."
+        "A for loop with the `zip` function.  \n",
+        "`zip` makes an iterator that aggregates elements from each of the iterables (source : [Python.org](https://docs.python.org/3.3/library/functions.html#zip))."
       ]
     },
     {
@@ -277,11 +182,7 @@
       "metadata": {
         "id": "1EMWG4oS1DM1",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "1e5aef98-6ada-4117-c350-f4cd847ae148"
+        "colab": {}
       },
       "source": [
         "jedi = [\"Yoda\", \"Luke\", \"Obi-wan\"]\n",
@@ -290,18 +191,46 @@
         "for i, j in zip(jedi, dark_side):\n",
         "  print(i, \"vs\", j, \", the fight will be terrible !\")"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Yoda vs Snoke , the fight will be terrible !\n",
-            "Luke vs Vador , the fight will be terrible !\n",
-            "Obi-wan vs Dooku , the fight will be terrible !\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "JNrLZDB5gFJW"
+      },
+      "source": [
+        "A for loop with the `enumerate()` function.  \n",
+        "`enumerate()` returns an enumerate object. (source : [Python.org](https://docs.python.org/3.3/library/functions.html#enumerate))."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "cgyENIdXgFJY",
+        "colab": {}
+      },
+      "source": [
+        "list(enumerate(jedi))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vTFXDr9Ggd6w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for index, name in enumerate(jedi, start=1):\n",
+        "    print(name, \"is the Jedi n°\", index)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -320,11 +249,7 @@
       "metadata": {
         "id": "t0EFwqYS4cl6",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "c355354a-40bc-43a9-c1fa-92de6299405d"
+        "colab": {}
       },
       "source": [
         "counter = 0\n",
@@ -333,20 +258,8 @@
         "  counter += 1 # for incrementing counter\n",
         "  # equivalent to : \"counter = counter + 1\""
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The counter has the value : 0\n",
-            "The counter has the value : 1\n",
-            "The counter has the value : 2\n",
-            "The counter has the value : 3\n",
-            "The counter has the value : 4\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -363,11 +276,7 @@
       "metadata": {
         "id": "uDchUin41DQH",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2b409523-870b-45eb-a9bc-51b10985f120"
+        "colab": {}
       },
       "source": [
         "counter = 5                           # Set the value to 5 \n",
@@ -379,16 +288,8 @@
         "\n",
         "print(factorial) "
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "120\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -397,7 +298,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Stoping `while` loop is done with `break` keyword.  \n",
+        "##The `break` statement\n",
+        "Stoping `for` or `while` loop is done with `break` keyword.  \n",
         "Useful tip if the loop is an **infinite** one !  "
       ]
     },
@@ -406,11 +308,7 @@
       "metadata": {
         "id": "vQlgZJjq5uNI",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        },
-        "outputId": "2ed28fb5-b527-41e3-b0cd-0e817216ae09"
+        "colab": {}
       },
       "source": [
         "counter = 0\n",
@@ -422,21 +320,8 @@
         "  if counter > 5:\n",
         "    break"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "I'm a Jedi!\n",
-            "I'm a Jedi!\n",
-            "I'm a Jedi!\n",
-            "I'm a Jedi!\n",
-            "I'm a Jedi!\n",
-            "I'm a Jedi!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -445,7 +330,7 @@
         "colab_type": "text"
       },
       "source": [
-        "`while` loop must be handling with caution since script could run infinitely ..."
+        "`while` loop must be handling with caution since this loop may run infinitely ..."
       ]
     },
     {
@@ -459,6 +344,34 @@
         "# Infinite loop, the condition is always satisfied (True), so horrible script ...\n",
         "while True:\n",
         "  print(\"I'm a Jedi!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1A3Om7OniheU",
+        "colab_type": "text"
+      },
+      "source": [
+        "##The `continue` statement\n",
+        "The `continue` statement stops the current iteration of the loop, and continue with the next."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W1d_jIU4ihsI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "jedi = [\"Yoda\", \"Luke\", \"Obi-wan\"]\n",
+        "for i in jedi:\n",
+        "  if i == \"Obi-wan\":\n",
+        "    continue\n",
+        "  print(i)"
       ],
       "execution_count": null,
       "outputs": []
@@ -506,7 +419,7 @@
         "    743, 527\n",
         "]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
