--- a/Conditions.ipynb
+++ b/Conditions.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN2EBLKQzG9tYKoTQsfrMmb",
+      "authorship_tag": "ABX9TyO+TaSFocqH1On7aOHgQo6U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -269,17 +269,29 @@
       "metadata": {
         "id": "nV1JS0EwOHy9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "50f80383-d372-41c5-fb5b-58c588617291"
       },
       "source": [
-        "name = \"Luke\"\n",
+        "name = \"Vador\"\n",
         "if not name == \"Yoda\" and not name == \"Luke\":\n",
         "  print(\"Are you a Jedi\", name, \"?\")\n",
         "else:\n",
         "  print(\"Welcome\", name, \"!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Are you a Jedi Vador ?\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
