--- a/Data_structures.ipynb
+++ b/Data_structures.ipynb
@@ -5,11 +5,8 @@
     "colab": {
       "name": "Data structures.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "VH_cJMkvORV9",
-        "ar6V2ZN4Tnwc"
-      ],
-      "authorship_tag": "ABX9TyPihPIUuDmBcqLohdKeT6W5",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMQRGJQCvd2sclJjG5Msll2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,9 +348,8 @@
         "colab_type": "text"
       },
       "source": [
-        "###Other operations on tuple\n",
+        "###Other operations on tuples\n",
         "- `tuple1 + tuple2` : for concatenation of both tuples.\n",
-        "- `cmp(tuple1, tuple2)` : for comparing elements of both tuples.\n",
         "- `len(tuple)` : for counting the total length of the tuple.\n",
         "- `max(tuple)` : for counting item from the tuple with max value.\n",
         "- `min(tuple)` : for counting item from the tuple with min value.\n",
@@ -400,7 +396,7 @@
         "---\n",
         "##Lists\n",
         "Lists is a versatile data strucure and can contain any type of object.  \n",
-        "List are mutables. The typical form is : `[value1, value2, value3]`.\n"
+        "Lists are mutables. The typical form is : `[value1, value2, value3]`.\n"
       ]
     },
     {
@@ -863,9 +859,8 @@
         "id": "lYoEmj-Tg3Wi"
       },
       "source": [
-        "###Other operations on tuple\n",
+        "###Other operations on lists\n",
         "- `list1 + list2` : for concatenation of both lists.\n",
-        "- `cmp(list1, list2)` : for comparing elements of both lists.\n",
         "- `len(list)` : for counting the total length of the list.\n",
         "- `max(list)` : for counting item from the list with max value.\n",
         "- `min(list)` : for counting item from the list with min value.\n",
