--- a/Logical_operations.ipynb
+++ b/Logical_operations.ipynb
@@ -6,7 +6,7 @@
       "name": "Logical operations.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIt3schhWqadC06hrgAR/g",
+      "authorship_tag": "ABX9TyMlwKeZfr/kHeqMemUKuiMO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -412,19 +412,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cTxsQyVtMHSU",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Gzg8u61iNpyU",
@@ -443,7 +430,7 @@
       },
       "source": [
         "# Your turn here for the 4 variables\n",
-        "number = 10\n",
+        "first_number = 10\n",
         "second_number = 10\n",
         "first_array = [1]\n",
         "second_array = [1,2,3]\n",
