--- a/Strings_formatting_and_operations.ipynb
+++ b/Strings_formatting_and_operations.ipynb
@@ -6,7 +6,7 @@
       "name": "Strings formatting and operations.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM3AQlvBHfozI0lePCb3wZJ",
+      "authorship_tag": "ABX9TyPONE5VlDDcilagO/D9taFp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -687,15 +687,19 @@
       "metadata": {
         "id": "5RjvRBKqsgYm",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 246
+        },
+        "outputId": "78d624da-58a5-425c-d1e6-1f3aa8e300fe"
       },
       "source": [
-        "s = \"Find the correct sentence, you should do here!\"\n",
+        "s = \"Much to learn, you still have.\"\n",
         "\n",
         "# Length should be 30\n",
         "print(\"Length of s = %d\" % len(s))\n",
         "\n",
-        "# First occurrence of \"l\" should be at index 10\n",
+        "# First occurrence of \"l\" should be at index 8\n",
         "print(\"The first occurrence of the letter l = %d\" % s.index(\"l\"))\n",
         "\n",
         "# Number of l's should be 3\n",
@@ -726,8 +730,28 @@
         "# each containing only a word\n",
         "print(\"Split the words of the string: %s\" % s.split(\" \"))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Length of s = 30\n",
+            "The first occurrence of the letter l = 8\n",
+            "l occurs 3 times\n",
+            "The first five characters are 'Much '\n",
+            "The next five characters are 'to le'\n",
+            "The thirteenth character is 'n'\n",
+            "The characters with odd index are 'uht er,yusilhv.'\n",
+            "The last five characters are 'have.'\n",
+            "String in uppercase: MUCH TO LEARN, YOU STILL HAVE.\n",
+            "String in lowercase: much to learn, you still have.\n",
+            "String starts with 'Much to'. Good!\n",
+            "String ends with 'you still have.'. Good!\n",
+            "Split the words of the string: ['Much', 'to', 'learn,', 'you', 'still', 'have.']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
