--- a/Data_structures.ipynb
+++ b/Data_structures.ipynb
@@ -6,7 +6,7 @@
       "name": "Data structures.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMQRGJQCvd2sclJjG5Msll2",
+      "authorship_tag": "ABX9TyOkLPEI+CRQTufN2azUlgq1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -926,14 +926,26 @@
       "metadata": {
         "colab_type": "code",
         "id": "25ab0hl5f290",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cb9f402c-4820-42c5-824c-1480c230ee43"
       },
       "source": [
         "dic1 = {\"name\": \"John\", \"age\": 24, \"country\": \"UK\"}\n",
         "print(dic1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'name': 'John', 'age': 24, 'country': 'UK'}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -975,7 +987,7 @@
         "dic2[\"city\"] = 'London'\n",
         "dic2[\"country\"] = \"UK\""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1007,13 +1019,30 @@
       "metadata": {
         "colab_type": "code",
         "id": "Ien7fLgqf2-H",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ead9a308-efdc-4d48-baa3-e366e8b8b339"
       },
       "source": [
         "dic1.values()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['John', 24, 'UK', {'street': '5th Avenue', 'zip code': '7777', 'city': 'London', 'country': 'UK'}])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1176,14 +1205,42 @@
       "metadata": {
         "id": "X2o-TcUwoDD_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "aeff8fc4-6a0c-4550-9421-db46b681c23f"
       },
       "source": [
         "dic1[\"address\"] = dic2\n",
-        "print(dic1)"
+        "print(dic1)\n",
+        "dic1['country']"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'name': 'John', 'age': 24, 'country': 'UK', 'address': {'street': '5th Avenue', 'zip code': '7777', 'city': 'London', 'country': 'UK'}}\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'UK'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
