--- a/Strings_formatting_and_operations.ipynb
+++ b/Strings_formatting_and_operations.ipynb
@@ -6,7 +6,7 @@
       "name": "Strings formatting and operations.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPONE5VlDDcilagO/D9taFp",
+      "authorship_tag": "ABX9TyOXlpF/YDvT+V3mPF+SdWQR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,8 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Iem5COJFMZ5a",
-        "colab_type": "text"
+        "id": "Iem5COJFMZ5a"
       },
       "source": [
         "# Strings formatting and operations\n",
@@ -45,8 +44,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mimrFTXTO7NC",
-        "colab_type": "text"
+        "id": "mimrFTXTO7NC"
       },
       "source": [
         "## Strings formatting\n",
@@ -57,9 +55,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UfObsKYkOlGy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UfObsKYkOlGy"
       },
       "source": [
         "string1 = \"Python\"\n",
@@ -71,8 +67,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xFusqmpafTck",
-        "colab_type": "text"
+        "id": "xFusqmpafTck"
       },
       "source": [
         "For several elements simply use the tuple structure, with parentheses, and create your own formatting."
@@ -81,9 +76,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6WjHC5R9PCul",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6WjHC5R9PCul"
       },
       "source": [
         "string2 = \"beginner\"\n",
@@ -95,8 +88,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iJgjW1Hvf6RD",
-        "colab_type": "text"
+        "id": "iJgjW1Hvf6RD"
       },
       "source": [
         "## Strings operations\n",
@@ -106,8 +98,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GVXYC9BRgK-8",
-        "colab_type": "text"
+        "id": "GVXYC9BRgK-8"
       },
       "source": [
         "###Concatenating \n",
@@ -117,9 +108,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pk1udr8VggkK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Pk1udr8VggkK"
       },
       "source": [
         "myname = \"Yoda\"\n",
@@ -131,8 +120,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bBQ4hiBVhItI",
-        "colab_type": "text"
+        "id": "bBQ4hiBVhItI"
       },
       "source": [
         "The `*` operator is simply use to multiply strings to make a longer one."
@@ -141,9 +129,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FRlKNEwfhH8s",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FRlKNEwfhH8s"
       },
       "source": [
         "myname = \"Yoda\"\n",
@@ -155,8 +141,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ftOgqPoghh6c",
-        "colab_type": "text"
+        "id": "ftOgqPoghh6c"
       },
       "source": [
         "### Indexing\n",
@@ -168,9 +153,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E-KY5iO9hiFY",
-        "colab_type": "code",
-        "colab": {}
+        "id": "E-KY5iO9hiFY"
       },
       "source": [
         "myname[0]"
@@ -181,9 +164,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eDE9QlnPiX2l",
-        "colab_type": "code",
-        "colab": {}
+        "id": "eDE9QlnPiX2l"
       },
       "source": [
         "myname[3]"
@@ -194,9 +175,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lWm8Nyg2ibCd",
-        "colab_type": "code",
-        "colab": {}
+        "id": "lWm8Nyg2ibCd"
       },
       "source": [
         "myname[4]"
@@ -207,8 +186,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VQInWHJoihRX",
-        "colab_type": "text"
+        "id": "VQInWHJoihRX"
       },
       "source": [
         "Counting from the right is possible with the `-` operator."
@@ -217,9 +195,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UVLMUFvviijz",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UVLMUFvviijz"
       },
       "source": [
         "myname[-4]"
@@ -230,8 +206,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "U0cDFs4Gi0vM",
-        "colab_type": "text"
+        "id": "U0cDFs4Gi0vM"
       },
       "source": [
         "###Slicing\n",
@@ -244,8 +219,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "72nzk0GlkL53",
-        "colab_type": "text"
+        "id": "72nzk0GlkL53"
       },
       "source": [
         "The complete string since the step is set to 1."
@@ -254,9 +228,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OlJEBIczjtel",
-        "colab_type": "code",
-        "colab": {}
+        "id": "OlJEBIczjtel"
       },
       "source": [
         "myname[0:4:1]"
@@ -267,8 +239,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ukIC8KK4kRY6",
-        "colab_type": "text"
+        "id": "ukIC8KK4kRY6"
       },
       "source": [
         "One out two characters."
@@ -277,9 +248,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m4EWhQnuj86v",
-        "colab_type": "code",
-        "colab": {}
+        "id": "m4EWhQnuj86v"
       },
       "source": [
         "myname[0:4:2]"
@@ -290,8 +259,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qxjYBo0XkDYo",
-        "colab_type": "text"
+        "id": "qxjYBo0XkDYo"
       },
       "source": [
         "The **end** index is excluded."
@@ -300,9 +268,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WzS2cC1Gj9FR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WzS2cC1Gj9FR"
       },
       "source": [
         "myname[0:3:1]"
@@ -313,8 +279,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Vqg1_tMMlIbD",
-        "colab_type": "text"
+        "id": "Vqg1_tMMlIbD"
       },
       "source": [
         "This syntax is more concise but still correct and gives the same results."
@@ -323,9 +288,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3Wo0rBavlSFO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3Wo0rBavlSFO"
       },
       "source": [
         "myname[:3]"
@@ -336,8 +299,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "O3Pf3a1qlVL3",
-        "colab_type": "text"
+        "id": "O3Pf3a1qlVL3"
       },
       "source": [
         "Other example."
@@ -346,9 +308,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Igsai2cMj9Hw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Igsai2cMj9Hw"
       },
       "source": [
         "10*myname[0:3:1]"
@@ -359,8 +319,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6bXKvU_ckkfg",
-        "colab_type": "text"
+        "id": "6bXKvU_ckkfg"
       },
       "source": [
         "### The built-in methods for strings\n",
@@ -371,8 +330,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kz7fq0VdmDws",
-        "colab_type": "text"
+        "id": "kz7fq0VdmDws"
       },
       "source": [
         "#### Length of string\n",
@@ -382,9 +340,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dhTQdls_kk3i",
-        "colab_type": "code",
-        "colab": {}
+        "id": "dhTQdls_kk3i"
       },
       "source": [
         "len(myname)"
@@ -395,9 +351,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EV_2LSu3mVty",
-        "colab_type": "code",
-        "colab": {}
+        "id": "EV_2LSu3mVty"
       },
       "source": [
         "len(10*myname)"
@@ -408,8 +362,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "upAbaMmMmb0e",
-        "colab_type": "text"
+        "id": "upAbaMmMmb0e"
       },
       "source": [
         "####Index of character\n",
@@ -419,9 +372,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t1M6XAvSmb8T",
-        "colab_type": "code",
-        "colab": {}
+        "id": "t1M6XAvSmb8T"
       },
       "source": [
         "myname.index(\"o\")"
@@ -432,9 +383,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p8XMy9H7m_qX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "p8XMy9H7m_qX"
       },
       "source": [
         "myname.index(\"Y\")"
@@ -445,8 +394,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RR4NowHzmcUK",
-        "colab_type": "text"
+        "id": "RR4NowHzmcUK"
       },
       "source": [
         "Python is very sensitive ! And particulary to the case ..."
@@ -455,9 +403,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y3SFszZjm_AS",
-        "colab_type": "code",
-        "colab": {}
+        "id": "y3SFszZjm_AS"
       },
       "source": [
         "myname.index(\"y\")"
@@ -468,8 +414,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Zo0TZt2EnXAj",
-        "colab_type": "text"
+        "id": "Zo0TZt2EnXAj"
       },
       "source": [
         "Only the first matched occurence is given back !"
@@ -478,9 +423,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "naIY8OxgmccX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "naIY8OxgmccX"
       },
       "source": [
         "longstring = \"May the Force be with you\"\n",
@@ -492,8 +435,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3giXY4l7mcm8",
-        "colab_type": "text"
+        "id": "3giXY4l7mcm8"
       },
       "source": [
         "#### Count of character\n",
@@ -503,9 +445,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nZOsUzrqmcuN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nZOsUzrqmcuN"
       },
       "source": [
         "longstring.count(\"y\")"
@@ -516,8 +456,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ns_4o-hnmc2Z",
-        "colab_type": "text"
+        "id": "ns_4o-hnmc2Z"
       },
       "source": [
         "#### Change the case\n",
@@ -527,9 +466,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CEVVEezNmc-e",
-        "colab_type": "code",
-        "colab": {}
+        "id": "CEVVEezNmc-e"
       },
       "source": [
         "longstring.lower()"
@@ -540,9 +477,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CmXswpnDpg_f",
-        "colab_type": "code",
-        "colab": {}
+        "id": "CmXswpnDpg_f"
       },
       "source": [
         "longstring.upper()"
@@ -553,8 +488,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eH0_XjMCpjtG",
-        "colab_type": "text"
+        "id": "eH0_XjMCpjtG"
       },
       "source": [
         "#### Split the string\n",
@@ -564,9 +498,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8SHDElJ8pj0u",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8SHDElJ8pj0u"
       },
       "source": [
         "longstring.split()"
@@ -577,8 +509,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "arjMJdzBpj8f",
-        "colab_type": "text"
+        "id": "arjMJdzBpj8f"
       },
       "source": [
         "The default pattern of division is the blank space but you can specify your own."
@@ -587,9 +518,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fvzrwaYjpkEV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "fvzrwaYjpkEV"
       },
       "source": [
         "longstring.split(\"e\")"
@@ -600,9 +529,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "at3SDY9Bqui8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "at3SDY9Bqui8"
       },
       "source": [
         "longstring.split(\"y\")"
@@ -613,8 +540,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "M3s9IIArpkMD",
-        "colab_type": "text"
+        "id": "M3s9IIArpkMD"
       },
       "source": [
         "####Match start / end of the string\n",
@@ -624,9 +550,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "50CAZkvTpkUi",
-        "colab_type": "code",
-        "colab": {}
+        "id": "50CAZkvTpkUi"
       },
       "source": [
         "longstring.startswith(\"May\")"
@@ -637,9 +561,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RTiOfCmLrwtG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "RTiOfCmLrwtG"
       },
       "source": [
         "longstring.startswith(\"the dark side\")"
@@ -650,9 +572,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FnfANJ92r51s",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FnfANJ92r51s"
       },
       "source": [
         "longstring.endswith(\"you\")"
@@ -663,8 +583,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ar6V2ZN4Tnwc",
-        "colab_type": "text"
+        "id": "ar6V2ZN4Tnwc"
       },
       "source": [
         "## Exercices\n",
@@ -675,8 +594,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Gzg8u61iNpyU",
-        "colab_type": "text"
+        "id": "Gzg8u61iNpyU"
       },
       "source": [
         "The goal of this exercice is to find the correct sentence `s` corresponding to the statements give in the code."
@@ -686,15 +604,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "5RjvRBKqsgYm",
-        "colab_type": "code",
+        "outputId": "78d624da-58a5-425c-d1e6-1f3aa8e300fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 246
-        },
-        "outputId": "78d624da-58a5-425c-d1e6-1f3aa8e300fe"
+        }
       },
       "source": [
-        "s = \"Much to learn, you still have.\"\n",
+        "s = \"Modify the sentence here you should.\"\n",
         "\n",
         "# Length should be 30\n",
         "print(\"Length of s = %d\" % len(s))\n",
@@ -730,7 +647,7 @@
         "# each containing only a word\n",
         "print(\"Split the words of the string: %s\" % s.split(\" \"))\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,8 +673,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "O7qMnwzWPH_s",
-        "colab_type": "text"
+        "id": "O7qMnwzWPH_s"
       },
       "source": [
         "## Ressources\n",
@@ -768,8 +684,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Q0GDp3kGPERt",
-        "colab_type": "text"
+        "id": "Q0GDp3kGPERt"
       },
       "source": [
         "\n",
